--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@types/react": "^16.9.50",
+    "@types/react-dom": "^16.9.8",
     "react": "^15.4.0 || ^16.0.0",
     "react-dom": "^15.4.0 || ^16.0.0"
   }
