--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/3c1u/tohkani.com",
   "author": "Hikaru Terazono (3c1u)",
   "devDependencies": {
-    "parcel": "^1.12.4",
+    "parcel": "^2.0.0-beta.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   },
