--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "react": "^15.4.0 || ^16.0.0",
