Downgrade to Parcel v1

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "repository": "https://github.com/3c1u/tohkani.com",
   "author": "Hikaru Terazono (3c1u)",
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1",
+    "parcel": "^1.12.4",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   },
   "scripts": {
     "serve": "parcel ./src/index.html",
-    "deploy": "parcel build ./src/index.html --public-url https://www.tohkani.com/",
+    "deploy": "parcel build ./src/index.html -d docs/ --public-url https://www.tohkani.com/",
     "clean": "rimraf dist"
   },
   "dependencies": {
