--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "author": "Hikaru Terazono (3c1u)",
   "devDependencies": {
     "parcel": "^1.12.4",
+    "autoprefixer": "^7.2.1",
+    "postcss-modules": "^3.2.2",
     "rimraf": "^3.0.2",
+    "stylus": "^0.54.8",
     "typescript": "^4.0.3"
   },
   "scripts": {
