--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,9 @@ jobs:
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
-
+      - name: Lint
+        run: |
+          yarn lint
       - name: Dry run
         run: |
           yarn
