--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
     "repository": "https://github.com/3c1u/tohkani.com",
     "author": "Hikaru Terazono (3c1u)",
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "4.0.1",
+        "@typescript-eslint/parser": "4.0.1",
         "autoprefixer": "^7.2.1",
+        "eslint": "^7.10.0",
+        "eslint-config-airbnb": "^18.2.0",
+        "eslint-config-prettier": "^6.12.0",
+        "eslint-import-resolver-parcel": "^1.10.5",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.21.3",
+        "eslint-plugin-react-hooks": "^4.1.2",
         "parcel": "^1.12.4",
         "postcss-modules": "^3.2.2",
         "prettier": "^2.1.2",
@@ -19,7 +30,9 @@
         "deploy": "parcel build ./src/index.html -d docs/ --public-url https://www.tohkani.com/",
         "clean": "rimraf dist",
         "fmt": "prettier --write \"./src/**/*.{ts,tsx}\"",
-        "fmt-dry": "prettier --check \"./src/**/*.{ts,tsx}\""
+        "fmt:dry": "prettier --check \"./src/**/*.{ts,tsx}\"",
+        "lint": "eslint --ext .ts,.tsx ./src",
+        "lint:fix": "eslint --ext .ts,.tsx ./src --fix"
     },
     "dependencies": {
         "@material-ui/core": "^4.11.0",
