--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,14 +5,19 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref != 'refs/heads/main'
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
-      - name: Lint
-        run: |
-          yarn lint
-      - name: Dry run
+
+      -name: Install 🦀
         run: |
           yarn
+
+      - name: Lint 📎
+        run: |
+          yarn lint
+
+      - name: Dry run
+        run: |
           yarn deploy
