--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,9 @@
             }
         ],
         "react-hooks/rules-of-hooks": "error",
-        "react-hooks/exhaustive-deps": "error"
+        "react-hooks/exhaustive-deps": "error",
+        "no-use-before-define": [0],
+        "@typescript-eslint/no-use-before-define": [1]
     },
     "settings": {
         "import/resolver": {
