--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "repository": "https://github.com/3c1u/tohkani.com",
     "author": "Hikaru Terazono (3c1u)",
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "4.6.0",
-        "@typescript-eslint/parser": "4.0.1",
+        "@typescript-eslint/eslint-plugin": "^4.6.0",
+        "@typescript-eslint/parser": "^4.6.0",
         "autoprefixer": "^9.8.6",
         "browserslist": "^4.14.5",
         "eslint": "^7.12.1",
