More strict indent rules

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "serve": "parcel ./src/index.html",
         "deploy": "parcel build ./src/index.html -d docs/ --public-url https://www.tohkani.com/",
         "clean": "rimraf dist",
-        "fmt": "yarn fmt:ts && yarn fmt:stylus",
+        "fmt": "yarn fmt:json && yarn fmt:ts && yarn fmt:stylus",
+        "fmt:json": "prettier --write \"./**/*.{json,prettierrc,parcelrc,postcssrc}\"",
         "fmt:ts": "prettier --write \"./src/**/*.{ts,tsx}\"",
         "fmt:ts:dry": "prettier --check \"./src/**/*.{ts,tsx}\"",
         "fmt:stylus": "stylus-supremacy format ./src/**/*.styl --replace",
