--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,19 @@
     "singleQuote": true,
     "trailingComma": "all",
     "tabWidth": 4,
-    "useTabs": false
+    "useTabs": false,
+    "overrides": [
+        {
+            "files": ".prettierrc",
+            "options": { "parser": "json" }
+        },
+        {
+            "files": ".parcelrc",
+            "options": { "parser": "json" }
+        },
+        {
+            "files": ".postcssrc",
+            "options": { "parser": "json" }
+        }
+    ]
 }
